--- a/templates/login.html
+++ b/templates/login.html
@@ -46,17 +46,19 @@
                                 <h1 padding>Inner Intel</h1>
                                 <br><br>
                                 <h4 class="login-title">Sign in to your account</h4>
-                                <form>
+                                <form action="{% url 'login_user' %}" method="post">
                                     <div class="form-group">
                                         <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control" id="exampleInputEmail1">
+                                        <input type="email" class="form-control" id="exampleInputEmail1" name="input_email">
                                     </div>
                                     <div class="form-group">
                                         <label for="exampleInputPassword1">Password</label>
-                                        <input type="password" class="form-control" id="exampleInputPassword1">
+                                        <input type="password" class="form-control" id="exampleInputPassword1" name="input_pwd">
                                     </div>
-                                    <a href="{% url 'index' %}" class="btn btn-primary">Login</a>
+                                    <input type="submit" class="btn btn-primary" value="Login">
+
                                     <a href="{% url 'index' %}" class="forgot-link">Forgot password?</a>
+                                    <span style="color:orange;">{{ error_msg }}</span>
                                 </form>
                             </div>
                             <div>
