--- a/templates/client.html
+++ b/templates/client.html
@@ -147,7 +147,7 @@
 
                                         <div class="col-lg-2 col-md-2">
                                             <h4>{{ client_first_name }}&nbsp;{{ client_last_name }}</h4>
-                                            <p>58</p>
+                                            <p>{{ client_age }}</p>
                                             <p>{{ client_gender }}</p>
                                         </div>
 
