--- a/templates/index.html
+++ b/templates/index.html
@@ -178,7 +178,15 @@
                                                     <td>{{ cli }}</td>
                                                 {% endif %}
                                                 {% if forloop.counter == 3 %}
-                                                    <td><span class="label label-danger">{{ cli }}</span></td>
+                                                    {% if cli == 'high' %}
+                                                        <td><span class="label label-danger">{{ cli }}</span></td>
+                                                    {% endif %}
+                                                    {% if cli == 'low' %}
+                                                        <td><span class="label label-success">{{ cli }}</span></td>
+                                                    {% endif %}
+                                                    {% if cli == 'mid' %}
+                                                        <td><span class="label label-warning">{{ cli }}</span></td>
+                                                    {% endif %}
                                                 {% endif %}
                                                 {% if forloop.counter == 4 %}
                                                     <td>{{ cli }}</td>
