--- a/templates/setting.html
+++ b/templates/setting.html
@@ -183,17 +183,17 @@
                                                value="{{ password }}" name="password">
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="col-sm-2 control-label">Notification Setting</label>
-                                    <div class="col-sm-10">
-                                        <select style="margin-bottom:15px;" class="form-control">
-                                            <option>need to discuss</option>
-                                            <option>2</option>
-                                            <option>3</option>
-                                            <option>4</option>
-                                            <option>5</option>
-                                        </select>
-                                    </div>
+<!--                                <div class="form-group">-->
+<!--                                    <label class="col-sm-2 control-label">Notification Setting</label>-->
+<!--                                    <div class="col-sm-10">-->
+<!--                                        <select style="margin-bottom:15px;" class="form-control">-->
+<!--                                            <option>need to discuss</option>-->
+<!--                                            <option>2</option>-->
+<!--                                            <option>3</option>-->
+<!--                                            <option>4</option>-->
+<!--                                            <option>5</option>-->
+<!--                                        </select>-->
+<!--                                    </div>-->
                                 </div>
 
                                 <div class="form-group">
