--- a/templates/index.html
+++ b/templates/index.html
@@ -42,6 +42,9 @@
             padding-block: 7px;
             margin-inline: 4px;
         }
+        .paginate_button:hover{
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
