--- a/templates/client_data.html
+++ b/templates/client_data.html
@@ -139,6 +139,16 @@
                         <div class="col-lg-12">
                             <div class="panel panel-white" style="height: 80vh;">
                                 <div class="panel-body">
+                                    <script>
+                                        function myFunction()
+                                        {
+                                            alert("你好，我是一个警告框！");
+                                        }
+                                    </script>
+                                    <div class="pull-right">
+                                        <button type="button" class="btn btn-default" onclick="myFunction()">Save Modification</button>
+                                        <br><br>
+                                    </div>
                                     <!-- log table -->
                                     <div id="log-table" style="height:auto;width:100%;overflow:auto;"></div>
                                     <div id="example-table" style="height:auto;width:100%;overflow:auto;"></div>
