--- a/templates/setting.html
+++ b/templates/setting.html
@@ -131,7 +131,7 @@
             <div id="main-wrapper">
                 <!-- Colum One -->
                 <div class="col-lg-12">
-                    <div class="panel panel-white">
+                    <div class="panel panel-white" style="height:75vh;">
                         <div class="panel-heading clearfix">
                             <h4 class="panel-title">{{ username }} </h4>
                         </div>
@@ -194,7 +194,7 @@
 <!--                                            <option>5</option>-->
 <!--                                        </select>-->
 <!--                                    </div>-->
-                                </div>
+<!--                                </div>-->
 
                                 <div class="form-group">
                                     <div class="col-sm-offset-2 col-sm-10">
@@ -233,7 +233,7 @@
 <script src='{% static "assets/plugins/flot/jquery.flot.tooltip.min.js" %}'></script>
 <script src='{% static "assets/plugins/flot/jquery.flot.pie.min.js" %}'></script>
 <script src='{% static "assets/js/ecaps.min.js" %}'></script>
-<script src="{% static "assets/js/pages/chart.js" %}"></script>
+<script src='{% static "assets/js/pages/chart.js" %}'></script>
 
 </body>
 </html>
